# minecraft-skinserver

./: Cargo.toml  Justfile
.sqlx/: query-0e9ebfacd9f905196d54772d6ff948e4df914d6c5a21b25c09892f928a8fdd3d.json  query-1e22d4e03bf04d8c581a77f9d10433b08e04067fd32949b8473630aeedd85dd6.json  query-5398afe0b46421f90f3f2617a0e51dd364f46efaf51c89de0dba0a3c2c4b056d.json  query-5b7ce554a47dde38497d688b68d7959da1cce0a799306522462bfd5fdcbe966a.json  query-69ef41d144e7448a5ce564aaa7e2c67f543d71cfa595459c80fcb95c6c415e65.json
backend/: Cargo.toml
backend/bindings/: ApiTexture.ts  SkinType.ts  index.ts
backend/src/: api.rs  db.rs  main.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue  Texture.vue
frontend/src/pages/: HomeView.vue  Texture.vue
frontend/src/router/: index.ts
frontend/src/styles/: main.scss
frontend/src/templates/: footer.pug  header.pug  sidebar.pug
frontend/src/types/: backend-types.ts
migrations/: 20251005083918_init.sql
