[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras","debug"] }
utoipa-swagger-ui = {version="9.0.2", features = ["axum"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
sqlx = { version = "=0.8.6", features = ["sqlite","runtime-tokio"] }
uuid = { version = "1.4.3", features = ["serde", "v4"] }
base64 = "0.22.1"
ts-rs = "11.0.1"
tower-http = { version = "0.5", features = ["cors"] }